--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -12,17 +12,32 @@ jobs:
       - uses: actions/setup-node@v4
         with: { node-version: '20' }
       - run: npm i -g @lhci/cli
-      - name: Run Lighthouse on each URL
+
+      # 1) Collect reports
+      - name: Collect Lighthouse reports
         run: |
           mkdir -p reports
           while read url; do
             echo "Auditing $url"
             safe=$(echo $url | sed 's|https\?://||; s|/|-|g')
-            lhci collect --url="$url" --numberOfRuns=3 --outputPath="./reports/$safe"
+            lhci collect --url="$url" --numberOfRuns=3 --outputDir="./reports/$safe"
           done < urls.txt
-          lhci assert --config=./lighthouserc.json
+
+      # 2) Assert, but don’t block artifact upload
+      - name: Assert thresholds
+        id: assert
+        continue-on-error: true
+        run: lhci assert --config=./lighthouserc.json
+
+      # 3) Always upload artifacts
       - name: Upload reports
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: lighthouse-reports
           path: reports
+
+      # 4) Fail the job if assertions failed
+      - name: Fail if assertions failed
+        if: steps.assert.outcome == 'failure'
+        run: exit 1
