--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -21,5 +21,5 @@ jobs:
             https://bitcoin-dad-ledger.vercel.app/
           runs: 3
           configPath: ./lighthouserc.json
-          uploadArtifacts: true            # always gives you HTML/JSON
-          temporaryPublicStorage: true     # quick link in logs
+          uploadArtifacts: true
+          temporaryPublicStorage: true
